# ocireffer

./: .gitignore  Cargo.toml  Makefile  README.md  wadm.yaml  wasmcloud.toml
.github/workflows/: release.yml
src/: azure.rs  lib.rs
