[package]
name = "ocireffer"
version = "0.1.5"
authors = [ "Brooks Townsend" ]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "ocireffer"

[dependencies]
futures = "0.3"
form_urlencoded = "1.0"
serde = "1.0.144"
serde_json = "1.0.85"
wasmbus-rpc = "0.10"
wasmcloud-interface-httpserver = "0.7"

[profile.release]
# Optimize for small code size
lto = true
opt-level = "s"
strip = true
